# xp_workflow

./: .gitignore  README.md  configure.py  cookiecutter.json  dvc.yaml  params.yaml  pixi.toml  pyproject.toml  scratch.py
data/toto/a1/.hydra/: config.yaml  hydra.yaml
data/toto/a2/.hydra/: config.yaml  hydra.yaml
test_project/: pyproject.toml
test_project/src/test_project/: stages.py
xp_workflow/: configure.py  pyproject.toml
xp_workflow/hydra_plugins/: dvc_default_resolvers.py
xp_workflow/src/xp_workflow/: mlflow_utils.py  run.py
{{cookiecutter.project_name}}/: README.md  configure.py  pyproject.toml
{{cookiecutter.project_name}}/xp_workflow/: pyproject.toml
{{cookiecutter.project_name}}/xp_workflow/src/xp_workflow/: configure.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: pyproject.toml
