[project]
authors = [{name = "Quentin Febvre", email = "quentin.febvre@imt-atlantique.fr"}]
dependencies = []
description = "Add a short description here"
name = "test_project"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
test_project = { path = ".", editable = true }

[tool.pixi.tasks]
