[project]
authors = [{name = "Quentin Febvre", email = "quentin.febvre@imt-atlantique.fr"}]
dependencies = []
description = "Add a short description here"
name = "xp_workflow"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
xp_workflow = { path = ".", editable = true }

[tool.pixi.tasks]
