[project]
name = "xp_workflow-demo"
version = "0.1.0"
description = "Workflow for configuring tracking and versioning experiments"
authors = [{name = "Quentin Febvre", email = "quentin.febvre@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.activation]
env = { MLFLOW_PROJECT_NAME = "{{cookiecutter.project_name}}" }

[tool.pixi.tasks]
rm-artifacts = "rm -rf artifacts"
configure = {cmd="python configure.py", depends-on=['rm-artifacts']}

[tool.pixi.tasks.start_pipeline]
cmd = "python -m xp_workflow.mlflow_utils run_name=$NAME project_name=$MLFLOW_PROJECT_NAME dvc_root=$(dvc root)"
env = {NAME = "default1"}

[tool.pixi.tasks.pipeline]
cmd = "dvc repro"
depends-on = ["configure", "start_pipeline"]

[tool.pixi.dependencies]
mlflow = ">=2.20.1,<3"
dvc = ">=3.59.0,<4"

[tool.pixi.pypi-dependencies]
hydra-zen = ">=0.13.0, <0.14"
xp_workflow = { path = "xp_workflow", editable = true }
{{cookiecutter.project_name}} = { path = "{{cookiecutter.project_name}}", editable = true }

[tool.pixi.feature.jupyter.dependencies]
ipykernel = "*"

[tool.pixi.environments]
jupyter = ["jupyter"]
