[project]
authors = [{name = "Quentin Febvre", email = "quentin.febvre@imt-atlantique.fr"}]
dependencies = []
description = "Add a short description here"
name = "xp_workflow"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
mlflow = ">=2.20.1,<3"
dvc = ">=3.59.0,<4"

[tool.pixi.pypi-dependencies]
hydra-zen = ">=0.13.0, <0.14"
xp_workflow = { path = ".", editable = true }

[tool.pixi.tasks]
