[project]
authors = [{name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"}]
dependencies = []
description = "{{cookiecutter.short_desc}}"
name = "{{cookiecutter.project_name}}"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
{{cookiecutter.project_name}} = { path = ".", editable = true }

[tool.pixi.tasks]
